apps/base/jellyfin/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(\`invalid.me\`)
      services:
        - kind: Service
          name: jellyfin
          port: 80
